[package]
authors = ["Oliver Lee <oliverzlee@gmail.com>"]
edition = "2018"
name = "chatty"
version = "0.1.0"

[dependencies]
bytes = "1.0.1"
mini-redis = "0.4.0"
tracing = "*"
tracing-subscriber = "*"
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1.0.123", features = ["derive"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
tokio-util = { version = "0.6.3", features = ["full"] }
serde_cbor = "0.11.1"
tokio-stream = "0.1.3"
futures = "0.3.13"
